update on master and sevak registration

--- a/public/src/View/dashboard.html
+++ b/public/src/View/dashboard.html
@@ -34,3 +34,10 @@
         <li><a href="./gosthi_type">Add gosthi type</a></li>
     </ul>
 </ul>
+
+<ul>
+    Registration
+    <ul>
+        <li><a href="./SevakRegistration">Sevak Registration</a></li>
+    </ul>
+</ul>
