--- a/public/src/View/dashboard.html
+++ b/public/src/View/dashboard.html
@@ -1,28 +1,28 @@
 <ul>
     Master
-    <ul style="list-style-type:circle;">  
+    <ul style="list-style-type:circle;">
         <li><a href="./country">Country </a></li>
         <li><a href="./state">State </a></li>
         <li><a href="./district">District </a></li>
         <li><a href="./taluka">Taluka </a></li>
-         <li><a href="./city">City / Village</a></li>   
-         <li><a href="./CityArea">City Area</a></li>
-         <li><a href="./pincode">Pincode</a></li>
-     <br>
-    <li><a href="./caste">Caste </a></li>
+        <li><a href="./city">City / Village</a></li>
+        <li><a href="./CityArea">City Area</a></li>
+        <li><a href="./pincode">Pincode</a></li>
+        <br>
+        <li><a href="./caste">Caste </a></li>
         <li><a href="./category">Category </a></li>
-    <li><a href="./blood_group">Blood Group </a></li>
-    <li><a href="./marital_status">Marital Status </a></li>
-    <li><a href="./relationship">Relationship </a></li>
-    <li><a href="./employment">Employment </a></li>
-     <br>
-    <li><a href="./talim_batch">Talim Batch </a></li>
-    <li><a href="./room">Room </a></li>
-    <li><a href="./degree">Degree </a></li>
-    <li><a href="./specialization">Specialization </a></li>
-    <li><a href="./grade">Grade </a></li>
-    <li><a href="./talent">Talent </a></li>
-    <br>
+        <li><a href="./blood_group">Blood Group </a></li>
+        <li><a href="./marital_status">Marital Status </a></li>
+        <li><a href="./relationship">Relationship </a></li>
+        <li><a href="./employment">Employment </a></li>
+        <br>
+        <li><a href="./talim_batch">Talim Batch </a></li>
+        <li><a href="./room">Room </a></li>
+        <li><a href="./degree">Degree </a></li>
+        <li><a href="./specialization">Specialization </a></li>
+        <li><a href="./grade">Grade </a></li>
+        <li><a href="./talent">Talent </a></li>
+        <br>
         <li><a href="./zone">Zone</a></li>
         <li><a href="./mandir">Mandir</a></li>
         <li><a href="./santnirdeshak">Sant Nirdeshak</a></li>
@@ -39,5 +39,13 @@
     Registration
     <ul>
         <li><a href="./SevakRegistration">Sevak Registration</a></li>
+    </ul>
+</ul>
+
+
+<ul>
+    Gosthi
+    <ul>
+        <li><a href="./GosthiGroup">Group Master</a></li>
     </ul>
 </ul>
