--- a/public/src/View/dashboard.html
+++ b/public/src/View/dashboard.html
@@ -47,5 +47,6 @@
     Gosthi
     <ul>
         <li><a href="./GosthiGroup">Group Master</a></li>
+        <li><a href="./Nirikshak">Nirikshak</a></li>
     </ul>
 </ul>
