--- a/public/src/View/dashboard.html
+++ b/public/src/View/dashboard.html
@@ -38,7 +38,7 @@
 <ul>
     Registration
     <ul>
-        <li><a href="./SevakRegistration">Sevak Registration</a></li>
+        <li><a href="./SevakRegistration">Sevak Registration (to be done by dhruv)</a></li>
     </ul>
 </ul>
 
